# libdc_fsm

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  mainpage.md
examples/: .gitignore  main.c  makefile
examples/word/: main.c
include/dc_fsm/: fsm.h
src/: CMakeLists.txt  fsm.c
tests/: CMakeLists.txt
